Bug #1248 - Mobile iOS: text overflows boxes on Group Docs - one more tweak

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1218,6 +1218,7 @@ body{
 }
 .doctable-panel{
     padding-bottom: 12px;
+    min-width: 330px;
     .doctable{
         td{
             width: 12%;
